#1 게시물별로 잠금 설정할 수 있도록 개선

--- a/tpl/_authorize_input_password.html
+++ b/tpl/_authorize_input_password.html
@@ -1,6 +1,9 @@
 <form action="{getRequestUriByServerEnviroment()}" method="post" class="page-lock<!--@if($pagelockerConfig->page_auth_expire_time > 0)--> page-has-caution<!--@end-->" ruleset="pageAuthorize">
 	<input type="hidden" name="module" value="pagelocker">
 	<input type="hidden" name="act" value="procPagelockerPageAuthorize">
+	<!--@if($pagelockerConfig->use_each_document_lock == 'Y')-->
+	<input type="hidden" name="document_srl" value="{$document_srl}">
+	<!--@end-->
 	<input type="hidden" name="xe_validator_id" value="/modules/pagelocker/tpl/page_authorize/1">
 	<input type="hidden" name="success_return_url" value="{getRequestUriByServerEnviroment()}">
 
