--- a/tpl/addition_setup.html
+++ b/tpl/addition_setup.html
@@ -16,11 +16,24 @@
 			</div>
 		</div>
 		<div class="x_control-group">
+			<label for="use_each_document_lock" class="x_control-label">게시물별 잠금 사용</label>
+			<div class="x_controls">
+				<label for="use_each_document_lock">
+					<input type="checkbox" id="use_each_document_lock" name="use_each_document_lock" value="Y" class="x_inline"  checked|cond="$pagelockerConfig->use_each_document_lock == 'Y'"> 
+					{$lang->use}
+				</label>
+				<p class="x_help-inline">
+					게시판 전체가 아닌 게시물별로 잠글 수 있습니다. 게시판 모듈에서만 작동합니다.<br>
+					사용 전에, 사용자 정의 이름이 lock_password 인 사용자 정의 항목을 추가해주시기 바랍니다.
+				</p>
+			</div>
+		</div>
+		<div class="x_control-group">
 			<label for="page_lock_type" class="x_control-label">{$lang->page_lock_type}</label>
 			<div class="x_controls">
 				<select name="page_lock_type" id="page_lock_type">
 					<option value="password">비밀번호</option>
-					<option value="point">포인트 차감</option>
+					<!--<option value="point">포인트 차감</option>-->
 				</select>
 			</div>
 		</div>
