--- a/tpl/_header.html
+++ b/tpl/_header.html
@@ -7,6 +7,6 @@
 </div>
 
 <ul class="x_nav x_nav-tabs">
-	<li class="x_active"|cond="$act === 'dispPagelockerAdminSetting' && false"><a href="{getUrl('', 'module', 'admin', 'act', 'dispPagelockerAdminSetting')}">기본 설정</a></li>
+	<li class="x_active"|cond="$act === 'dispPagelockerAdminSetting'" cond="false"><a href="{getUrl('', 'module', 'admin', 'act', 'dispPagelockerAdminSetting')}">기본 설정</a></li>
 	<li class="x_active"|cond="$act === 'dispPagelockerAdminPageAuthorizeLog'"><a href="{getUrl('', 'module', 'admin', 'act', 'dispPagelockerAdminPageAuthorizeLog')}">잠금 해제 기록</a></li>
 </ul>
