--- a/tpl/_authorize_point.html
+++ b/tpl/_authorize_point.html
@@ -4,6 +4,12 @@
 	<input type="hidden" name="xe_validator_id" value="/modules/page/tpl/page_authorize/1">
 	<input type="hidden" name="success_return_url" value="{getRequestUriByServerEnviroment()}">
 
+	<noscript>
+		<div class="message {$XE_VALIDATOR_MESSAGE_TYPE}" cond="$XE_VALIDATOR_MESSAGE && $XE_VALIDATOR_ID === '/modules/pagelocker/tpl/page_authorize/1'">
+			<p>{$XE_VALIDATOR_MESSAGE}</p>
+		</div>
+		</noscript>
+
 	<h1>"{$lang->this_page_is_locked}"</h1>
 	<div class="page-controls">
 		<div class="page-description" cond="$module_info->page_auth_expire_time > 0">
@@ -17,3 +23,5 @@
 		<input type="submit" value="잠금 해제" class="btn">
 	</div>
 </form>
+
+<script cond="$XE_VALIDATOR_MESSAGE && $XE_VALIDATOR_ID === '/modules/pagelocker/tpl/page_authorize/1'">alert('{$XE_VALIDATOR_MESSAGE}');</script>
